--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,54 @@
 <html>
 	<head>
+		<script type="text/javascript" src="Script.js"></script>
+		<link rel="stylesheet" type="text/css" href="Style.css" />
+		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Inconsolata">
 	</head>
 	
 	<body>
+		<div id = "mainWrapper">
+			<div id="board">
+			</div>
+			<div id="wrapper">
+				<div id="left">
+					<div id = "code", class = "codeBox", readonly>
+						<ol>
+							<li><code>svcsd</code></li>
+							<li><code>svcxcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code>svcsd</code></li>
+							<li><code></code></li>
+							<li><code></code></li>
+							<li><code></code></li>
+							<li><code></code></li>
+							<li><code></code></li>
+							<li><code></code></li>
+						</ol>
+					</div>
+				</div>
+				<div id="right">
+					<textarea id = "sudo", class = "codeBox", readonly></textarea>
+				</div>
+				<div id = "S1Wrapper", class = "WinputBox">
+					<textarea id = "S1", class = "inputBox"></textarea>
+				</div>
+				<div id = "S2wrapper", class = "WinputBox">
+					<textarea id = "S2", class = "inputBox"></textarea>
+				</div>
+			</div>
+		</div>	
 	</body>
 </html>
