--- a/index.htm
+++ b/index.htm
@@ -16,7 +16,9 @@
 		<div id="Main">
 			<div id="Left">
 				<div id="Code1">
-					<div id="TableWrap"></div>
+					<div id="TableWrap">
+						<canvas id="canvas"></canvas>
+					</div>
 				</div>
 				<div id="Input1">
 					<textarea id = "S1"></textarea>
