--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,7 @@
 	
 	<body>
 		<div id = "navBar">
-			<div id = "logoHold">DYNAMIC<br>PROGRAMMING</div>
+			<div id = "logoHold">DYNAMIC<br>PROGRAING</div>
 			<div id = "vLine"></div>
 			<div id = "vLine2"></div>
 		</div>
